--- a/Programs.html
+++ b/Programs.html
@@ -108,7 +108,7 @@
 
         <div class="col-md-4 d-flex">
           <div class="card program-card shadow-sm h-100 w-100">
-            <img src="https://images.unsplash.com/photo-1554224154-22dec7ec8818?auto=format&fit=crop&w=800&q=80" alt="Business Administration">
+            <img src="./Images/ba.jpg" alt="Business Administration">
             <div class="card-body">
               <h5 class="card-title">Business Administration</h5>
               <p class="card-text">Develop strategic leadership, finance, marketing, and management skills.</p>
@@ -128,7 +128,7 @@
 
         <div class="col-md-4 d-flex">
           <div class="card program-card shadow-sm h-100 w-100">
-            <img src="https://picsum.photos/id/1043/600/400" alt="Information Technology">
+            <img src="./Images/it.jpg" alt="Information Technology">
             <div class="card-body">
               <h5 class="card-title">Information Technology</h5>
               <p class="card-text">Study IT infrastructure, networks, databases, and systems management.</p>
@@ -138,7 +138,7 @@
 
         <div class="col-md-4 d-flex">
           <div class="card program-card shadow-sm h-100 w-100">
-            <img src="https://picsum.photos/id/1025/600/400" alt="Artificial Intelligence">
+            <img src="./Images/ai.jpg" alt="Artificial Intelligence">
             <div class="card-body">
               <h5 class="card-title">Artificial Intelligence</h5>
               <p class="card-text">Explore machine learning, neural networks, robotics, and AI applications.</p>
@@ -148,7 +148,7 @@
 
         <div class="col-md-4 d-flex">
           <div class="card program-card shadow-sm h-100 w-100">
-            <img src="https://picsum.photos/id/1033/600/400" alt="ADP in Computer Science">
+            <img src="./Images/adpincs.jpg" alt="ADP in Computer Science">
             <div class="card-body">
               <h5 class="card-title">ADP in Computer Science</h5>
               <p class="card-text">A 2-year program focused on foundational programming, systems, and web development.</p>
@@ -158,7 +158,7 @@
 
         <div class="col-md-4 d-flex">
           <div class="card program-card shadow-sm h-100 w-100">
-            <img src="https://picsum.photos/id/1052/600/400" alt="ADP in Account and Finance">
+            <img src="./Images/adpinaf.jpg" alt="ADP in Account and Finance">
             <div class="card-body">
               <h5 class="card-title">ADP in Account and Finance</h5>
               <p class="card-text">Understand accounting principles, taxation, auditing, and financial systems.</p>
@@ -168,7 +168,7 @@
 
         <div class="col-md-4 d-flex">
           <div class="card program-card shadow-sm h-100 w-100">
-            <img src="https://picsum.photos/id/1051/600/400" alt="ADP in Digital Marketing">
+            <img src="./Images/adpindm.jpg" alt="ADP in Digital Marketing">
             <div class="card-body">
               <h5 class="card-title">ADP in Digital Marketing</h5>
               <p class="card-text">Learn SEO, SEM, social media, content creation, and analytics tools.</p>
@@ -178,7 +178,7 @@
 
         <div class="col-md-4 d-flex">
           <div class="card program-card shadow-sm h-100 w-100">
-            <img src="https://picsum.photos/id/1031/600/400" alt="Fashion Design">
+            <img src="./Images/fd.jpg" alt="Fashion Design">
             <div class="card-body">
               <h5 class="card-title">Fashion Design</h5>
               <p class="card-text">Dive into creative fashion illustration, garment construction, and textiles.</p>
@@ -188,7 +188,7 @@
 
         <div class="col-md-4 d-flex">
           <div class="card program-card shadow-sm h-100 w-100">
-            <img src="https://picsum.photos/id/1044/600/400" alt="Textile Design">
+            <img src="./Images/td.jpg" alt="Textile Design">
             <div class="card-body">
               <h5 class="card-title">Textile Design</h5>
               <p class="card-text">Explore fabric techniques, print design, dyeing, and industrial textiles.</p>
