--- a/Index.html
+++ b/Index.html
@@ -137,7 +137,7 @@
   <!-- Call to Action -->
   <section style="background-color: #d9edf7;">
     <div class="container text-center">
-      <h2 class="section-title">Ready to Join INU?</h2>
+      <h2 class="section-title">Ready to Join Us?</h2>
       <p>Apply now and become part of a vibrant academic community that values growth, leadership, and innovation.</p>
       <a href="./Newform.html" class="btn btn-primary btn-lg mt-3">Apply Now</a>
     </div>
@@ -145,7 +145,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Islamabad National University. All rights reserved. | <a href="mailto:info@inu.edu.pk">info@inu.edu.pk</a></p>
+    <p>&copy; 2025 Islamabad National University. All rights reserved.</p>
   </footer>
 
   <!-- Bootstrap JS -->
